<resources>
    <string name="app_name">FireSMS</string>
    <string name="pretekli_pozivi">PRETEKLI POZIVI</string>
    <string name="vklopi">VKLOPI</string>
    <string name="izklopi">IZKLOPI</string>
    <string name="nastavitve">NASTAVITVE</string>
    <string name="dodaj_pozivnik">DODAJ POZIVNIK</string>
    <string name="dodaj_poziv">DODAJ POZIV</string>
    <string name="aktivni_pozivniki">AKTIVNI POZIVNIKI</string>
    <string name="todo">TODO</string>
    <string name="zvoni_tudi_v_tihem_na_inu">Zvoni tudi v tihem načinu</string>
    <string name="zvok">Zvok</string>
    <string name="vibriraj">Vibriraj</string>
    <string name="glasnost">Glasnost</string>
    <string name="zvok_pozivnika">Zvok pozivnika</string>
    <string name="shrani">SHRANI</string>
    <string name="success_added_pager_msg">Pozivnik dodan</string>
    <string name="failed_add_pager_msg">Dodaj številko ali besedo</string>
    <string name="service_working">Deluje</string>
    <string name="service_description">Obvestilo potrebno za pravilno delovanje pozivnika.</string>
    <string name="test">test</string>
    <string name="pozivno_okence_ez_ekran">Pozivno okence čez ekran</string>
    <string name="dev_options">dev options</string>
    <string name="pozivniki">pozivniki</string>
    <string name="test_alerter">Test alerter</string>
    <string name="prika_i_samo_notifikacijo_v_primeru_da_je_telefon_odklenjen">Prikaži samo notifikacijo v primeru da je telefon odklenjen</string>
    <string name="opozorilo">OPOZORILO</string>
    <string name="ob_vsaki_spremenjeni_nastavitvi_obvezno_testiraj_pozivnik_v_asu_5_sekund_bo_test_pri_el_z_izvajanjem_v_tem_asu_lahko_izklopite_ekran">Ob vsaki spremenjeni nastavitvi obvezno testiraj pozivnik! V času 5 sekund bo test pričel z izvajanjem. V tem času lahko izklopite ekran.</string>
    <string name="_0">0%</string>
    <string name="klikni_me">Klikni me</string>
    <string name="deluje">deluje</string>
    <string name="pozivnik_okence">Pozivnik okence</string>
    <string name="ime_pozivnika">ime_pozivnika</string>
    <string-array name="select_sound">
        <item>Izberi zvok pozivnika</item>
        <item>Pozivnik_1</item>
        <item>Pozivnik_2</item>
        <item>Pozivnik_3</item>
        <item>Pozivnik_4</item>
        <item>Pozivnik_5</item>

    </string-array>

</resources>
